compiler/tools/fpp-check/test/redef_enum_module.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef_enum_module.fpp: 2.1
module E { }
^
error: redefinition of symbol E
previous definition was here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef_enum_module.fpp: 1.1
enum E { X }
^
